<resources>
    <string name="app_name">LearnJava</string>
    <string name="welcome">Choose your Section</string>

    <!--Lesson Names-->
    <string name="lesson">Lesson</string>
    <string name="exercise">Exercise</string>
    <string name="Lesson1">Tutorial and Introduction</string>
    <string name="Lesson2">Hello World and Comments</string>
    <string name="Lesson3">Data Types and Variables</string>
    <string name="Lesson4">Primitive Operators</string>
    <string name="Lesson5">Functions   </string>
    <string name="Lesson6">Conditionals and Loops</string>
    <string name="Lesson7">Arrays   </string>
    <string name="Lesson8">Classes and Objects</string>
    <string name="Lesson9">Exceptions and Lists</string>

    <string name="Check_Text">Check</string>
    <string name="Skip_Text">Skip</string>

    <string name="FeedbackRight">Good job, that was right!</string>
    <string name="FeedbackWrong">That was not right.</string>

    <string name="PopUpText">Hello and Welcome to Learn Java! Please select an Username that you can remember:</string>

    //For testing
    <string name="longstring">nothing here yet nothin ghere yet nothing nothing nothing</string>
    <string name="shortString">nothing here yet</string>


    <!--Code Exercise-->
    <string name="code_fragment_sample">public class\u0020\u0020\u0020\u0020\u0020\u0020\u0020{\n\n\n\n\n\n\n\n}</string>
    <string name="code_fragment_inputtitle">Code</string>


    <!-- SignIn -->
    <string name="signin">SignUp</string>
    <string name="signin_name_hint">Nickname/ID</string>
    <string name="signin_email_hint">Email</string>
    <string name="signin_phone_number_hint">Phone number</string>
    <string name="signin_password_1_hint">Enter password</string>
    <string name="signin_password_2_hint">Confirm password</string>
    <string name="signin_submit">Sign up</string>
    <string name="toast_signinSuccessful">SignIn Successful</string>
    <string name="toast_signinFailed">SignIn failed. Try again</string>
    <string name="toast_signin_password">Passwords are not identical</string>
    <string name="toast_signin_password_short">Password length is to short, Minimal six character</string>
    <string name="toast_fieldRequired">Please enter all needed information in each field</string>


    <!-- LogIn -->
    <string name="login">Log In</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_1_hint">Enter password</string>
    <string name="login_submit">Log In</string>
    <string name="login_signin">Not a member? Sign Up!</string>
    <string name="signin_login">Already a member? Log in!</string>
    <string name="toast_loginFailed">LogIn failed. Try again</string>
    <string name="error_wrongPassword">Wrong password. Try again</string>

    <!--Cues-->
    <string name="Cue_Button">Got it!</string>
    <string name="wordCue_text">Your last Lesson</string>

    <string name="History_Cue_text">Your learned Sections</string>

    <string name="Question_Cue_text">Can you answer these?</string>
    <string name="Question_Button">Check it!</string>
    <string name="Question_Text">Do you know it?</string>
    <string name="Question_right">That was right!</string>
    <string name="Question_wrong">That was not correct.</string>

    <string name="Cloud_Cue_text">A Reminder</string>



</resources>
