<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkdarkLilay"
    tools:context=".view_sections.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:textSize="@dimen/TextSize25"
        android:gravity="center"
        android:padding="13dp"
        android:textColor="@color/light"
        android:text="@string/welcome"
        app:layout_constraintBottom_toTopOf="@+id/MainScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001" />

    <ScrollView
        android:id="@+id/MainScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/lesson1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:clickable="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:background="@drawable/main_background"
                android:backgroundTint="@color/darkOrange"
                android:text="@string/Lesson1" />


            <Button
                android:id="@+id/lesson2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:clickable="false"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:background="@drawable/main_background"
                android:backgroundTint="@color/orange"
                android:text="@string/Lesson2" />

            <Button
                android:id="@+id/lesson3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:clickable="false"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:background="@drawable/main_background"
                android:backgroundTint="@color/lightOrange"
                android:text="@string/Lesson3" />

            <Button
                android:id="@+id/lesson4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:clickable="false"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:background="@drawable/main_background"
                android:backgroundTint="@color/beige"
                android:text="@string/Lesson4" />


            <Button
                android:id="@+id/lesson5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:textSize="23sp"
                android:background="@drawable/main_background"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/Lesson5" />

            <Button
                android:id="@+id/lesson6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:textSize="23sp"
                android:background="@drawable/main_background"
                android:backgroundTint="@color/greyBlue"
                android:text="@string/Lesson6" />

            <Button
                android:id="@+id/lesson7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:textSize="23sp"
                android:background="@drawable/main_background"
                android:backgroundTint="@color/darkGreyBlue"
                android:text="@string/Lesson7" />


            <Button
                android:id="@+id/lesson8"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:textSize="23sp"
                android:background="@drawable/main_background"
                android:backgroundTint="@color/lilac"
                android:text="@string/Lesson8" />


            <Button
                android:id="@+id/lesson9"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:padding="10dp"
                android:textSize="23sp"
                android:background="@drawable/main_background"
                android:backgroundTint="@color/darkLilac"
                android:text="@string/Lesson9" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>