<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".view_registration.SignUpActivity">


    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/trixiesans"
        android:gravity="center_horizontal|bottom"
        android:text="@string/signin"
        android:textSize="50sp"
        android:textColor="@color/light"
        android:background="@drawable/main_background"
        app:layout_constraintBottom_toTopOf="@+id/loginin_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/loginin_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding ="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/login_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/signin_name_hint"
            android:includeFontPadding="true"
            android:inputType="text"
            android:background="@drawable/rounded_corners"
            android:maxLines="1"
            android:fontFamily="@font/trixiesans"
            android:layout_margin="6dp"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/signin_email_hint"
            android:layout_margin="6dp"
            android:includeFontPadding="true"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:fontFamily="@font/trixiesans"
            android:background="@drawable/rounded_corners"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/signin_password_1_hint"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_margin="6dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/trixiesans"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/signin_password_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/signin_password_2_hint"
            android:includeFontPadding="true"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_margin="6dp"
            android:fontFamily="@font/trixiesans"
            android:background="@drawable/rounded_corners"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:singleLine="true" />

    </LinearLayout>

    <Button
        android:id="@+id/login_submit"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_altert_green"
        android:text="@string/signin_submit"
        android:textAllCaps="false"
        android:textColor="@color/light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginin_input"/>

    <TextView
        android:id="@+id/login_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/signin_login"
        android:textSize="18sp"
        android:fontFamily="@font/trixiesans"
        android:textColor="@color/light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_submit"
        app:layout_constraintVertical_bias="0.0" />


    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_signup" />

<!--    <ImageButton-->
<!--        android:id="@+id/signin_login"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_margin="8dp"-->
<!--        android:backgroundTint="@color/white"-->
<!--        android:indeterminate="true"-->
<!--        android:indeterminateTint="@color/darkRed"-->
<!--        android:indeterminateTintMode="src_atop"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        tools:src="@drawable/ic_chevron_left_black"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>