<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/welcome"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/MainScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/Lesson1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:clickable="true"
                android:paddingTop="@dimen/PaddingScroll"
                android:paddingBottom="@dimen/PaddingScroll"
                android:paddingHorizontal="@dimen/PaddingSideScroll"
                android:background="@color/lightGreen1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:autoSizeMaxTextSize="@dimen/TextSize50"
                    android:autoSizeMinTextSize="@dimen/TextSize10"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:clickable="false"
                    android:text="@string/Lesson1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lesson2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:clickable="true"
                android:paddingTop="@dimen/PaddingScroll"
                android:paddingBottom="@dimen/PaddingScroll"
                android:paddingHorizontal="@dimen/PaddingSideScroll"
                android:background="@color/lightGreen2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:autoSizeMaxTextSize="@dimen/TextSize50"
                    android:autoSizeMinTextSize="@dimen/TextSize10"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:clickable="false"
                    android:text="@string/Lesson2" />
            </LinearLayout>

        <LinearLayout
            android:id="@+id/lesson3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:clickable="true"
            android:paddingTop="@dimen/PaddingScroll"
            android:paddingBottom="@dimen/PaddingScroll"
            android:paddingHorizontal="@dimen/PaddingSideScroll"
            android:background="@color/lightGreen3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autoSizeMaxTextSize="@dimen/TextSize50"
                android:autoSizeMinTextSize="@dimen/TextSize10"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:clickable="false"
                android:layout_gravity="center"
                android:text="@string/Lesson3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lesson4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:clickable="true"
            android:paddingTop="@dimen/PaddingScroll"
            android:paddingBottom="@dimen/PaddingScroll"
            android:paddingHorizontal="@dimen/PaddingSideScroll"
            android:background="@color/Green1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autoSizeMaxTextSize="@dimen/TextSize50"
                android:autoSizeMinTextSize="@dimen/TextSize10"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:clickable="false"
                android:layout_gravity="center"
                android:text="@string/Lesson4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lesson5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:clickable="true"
            android:paddingTop="@dimen/PaddingScroll"
            android:paddingBottom="@dimen/PaddingScroll"
            android:paddingHorizontal="@dimen/PaddingSideScroll"
            android:background="@color/Green3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autoSizeMaxTextSize="@dimen/TextSize50"
                android:autoSizeMinTextSize="@dimen/TextSize10"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:clickable="false"
                android:layout_gravity="center"
                android:text="@string/Lesson5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lesson6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:clickable="true"
            android:paddingTop="@dimen/PaddingScroll"
            android:paddingBottom="@dimen/PaddingScroll"
            android:paddingHorizontal="@dimen/PaddingSideScroll"
            android:background="@color/cadetBlue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autoSizeMaxTextSize="@dimen/TextSize50"
                android:autoSizeMinTextSize="@dimen/TextSize10"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:clickable="false"
                android:layout_gravity="center"
                android:text="@string/Lesson6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lesson7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:paddingTop="@dimen/PaddingScroll"
            android:paddingBottom="@dimen/PaddingScroll"
            android:paddingHorizontal="@dimen/PaddingSideScroll"
            android:background="@color/QueenBlue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autoSizeMaxTextSize="@dimen/TextSize50"
                android:autoSizeMinTextSize="@dimen/TextSize10"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:clickable="false"
                android:layout_gravity="center"
                android:text="@string/Lesson7" />
        </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>