<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_exercises.ExerciseViewCodeFragment">

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical">-->

        <LinearLayout
            android:id="@+id/contentHolderCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/exerciseTextCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shortString"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/trixiesans"
                android:textSize="18sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CodeTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/CodeTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxEms="20"
                    android:fontFamily="@font/inputmonocompressed_regular"
                    android:inputType="textMultiLine"
                    android:textSize="16sp"
                    android:hint="@string/code_fragment_inputtitle"
                    android:text="@string/code_fragment_sample"/>

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <Button
            android:id="@+id/OnlyCheckButtonExerciseCode"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_gravity="end"
            android:layout_margin="6dp"
            android:visibility="gone"
            android:background="@drawable/skip_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentHolderCode"
            app:layout_constraintVertical_bias="0.984" />

        <Button
            android:id="@+id/nextButtonExerciseCode"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_gravity="end"
            android:layout_margin="6dp"
            android:background="@drawable/check_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/OnlyCheckButtonExerciseCode"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentHolderCode"
            app:layout_constraintVertical_bias="0.989" />

    </androidx.constraintlayout.widget.ConstraintLayout>



<!--</com.android.volley.ui.NetworkImageView>-->